--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="container">
     <!-- Hero banner using a Bangladesh-inspired cover image with logo and tagline pre-rendered -->
     <section class="banner">
-      <img src="assets/images/banner-cover.png" alt="Amar Lab cover" class="banner-img" />
+      <img src="assets/images/banner.png" alt="Amar Lab cover" class="banner-img" />
     </section>
 
     <!-- Search box as the primary action -->
