--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <script defer src="js/app.js"></script>
   <!-- Load home page script to power search, featured items and continue quiz -->
   <script defer src="js/home.js"></script>
+  
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
+
 </head>
 <body>
   <header class="site-header">
