--- a/equipment-detail.html
+++ b/equipment-detail.html
@@ -14,6 +14,11 @@
   <!-- Append a version query to bypass browser caching of equipment.js -->
   <!-- Use a version query to ensure browsers refresh the updated script -->
   <script defer src="js/equipment.js?v=3"></script>
+  
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
+  
 </head>
 <body>
   <header class="site-header">
