--- a/safety.html
+++ b/safety.html
@@ -11,6 +11,11 @@
 
   <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/app.js"></script>
+
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
+
 </head>
 <body>
   <header class="site-header">
